# typemapping

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
.claude/: settings.local.json
.github/workflows/: test.yml
tests/: test_additional.py  test_arginfo.py  test_class_args.py  test_compat.py  test_extras.py  test_func_args.py  test_get_model_field.py  test_get_safe_type_hints.py  test_helpers.py  test_nested_field.py  test_origins.py  test_type_check.py  test_typecheck_extra.py  test_typemapping.py
typemapping/: __init__.py  compat.py  origins.py  type_check.py  typemapping.py  typemapping2.py
