[project]
name = "typemapping"
version = "0.1.2"
description = ""
authors = [
    { name = "rodbell" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "typing-extensions>=4.13.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black>=23.1.0",
    "isort>=5.11.5",
    "mypy>=1.10.0",
    "ruff>=0.11.10",
    "twine",
    "build"
    ]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
