[project]
name = "typemapping"
version = "0.1.3"
description = "Advanced type compatibility and checking system for Python"
authors = [
    { name = "rodbell", email = "bellirodrigo2@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["typing", "type-checking", "generics", "variance", "annotations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "typing-extensions>=4.13.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black>=23.1.0",
    "isort>=5.11.5",
    "mypy>=1.10.0",
    "ruff>=0.11.10",
    "twine",
    "build"
    ]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = [
    "tests/*"
]